--- a/gri-web/Dockerfile
+++ b/gri-web/Dockerfile
@@ -1,14 +1,14 @@
-FROM openjdk:8-jre-alpine
+FROM openjdk:13-jdk-alpine
 ARG SERVICE_NAME
 ARG JAR_FILE
 
 VOLUME /tmp
 
-COPY ${JAR_FILE} gri.jar
+COPY ${JAR_FILE} gri-web.jar
 
-ENV JAVA_OPTS="-Xmx128m -Xms64m"
 ENV SERVICE_NAME=${SERVICE_NAME}
+ENV PORT=${PORT}
 LABEL APP=${SERVICE_NAME}
 LABEL DOMAIN="gri"
 
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /gri.jar"]
+ENTRYPOINT [ "java", "-Xmx128m", "-Xms64m", "-Dserver.port=$PORT", "-Dspring.profiles.active=dev", "-jar", "/gri-web.jar"]
