--- a/.github/workflows/azure-deployment.yml
+++ b/.github/workflows/azure-deployment.yml
@@ -1,44 +1,69 @@
-name: 'Azure deployment'
+# This workflow will build a docker container, publish it to Azure Container Registry, and deploy it to Azure Kubernetes Service.
+#
+# To configure this workflow:
+#
+# 1. Set up the following secrets in your workspace:
+#     a. REGISTRY_USERNAME with ACR username
+#     b. REGISTRY_PASSWORD with ACR Password
+#     c. AZURE_CREDENTIALS with the output of `az ad sp create-for-rbac --sdk-auth`
+#
+# 2. Change the values for the REGISTRY_NAME, CLUSTER_NAME, CLUSTER_RESOURCE_GROUP and NAMESPACE environment variables (below).
 
-on:
-  push:
-    branches:
-      - development
+on: [push]
+
+# Environment variables available to all jobs and steps in this workflow
+env:
+  REGISTRY_NAME: ardikarscr
+  CLUSTER_NAME: ${{ secrets.AZURE_CLUSTER_NAME }}
+  CLUSTER_RESOURCE_GROUP: ${{ secrets.AZURE_CLUSTER_RESOURCE_GROUP }}
+  NAMESPACE: default
 
 jobs:
-  deploy:
-    name: 'Azure deployment'
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-18.04]
-    runs-on: ${{ matrix.os }}
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-      - name: build
-        run: |
-          docker build -t ardikars/gri-web:1.0.1-SNAPSHOT .
-          docker image tag ardikars/gri-web:1.0.1-SNAPSHOT ardikarscr.azurecr.io/ardikars/gri-web:latest
-      - name: login
-        run: |
-          docker login --username=${{ secrets.AZURE_CR_USERNAME }} --password=${{ secrets.AZURE_CR_PASSWORD }} ardikarscr.azurecr.io
-      - name: push
-        run: |
-          docker push ardikarscr.azurecr.io/ardikars/gri-web:latest
-      - name: Deploy
-        uses: azure/CLI@v1
-        with:
-          azcliversion: 2.0.72
-          inlineScript: |
-            az aks install-cli
-            az aks get-credentials --resource-group ardikars-rg --name ardikars-app
-            kubectl get nodes
-            kubectl apply -f .k8s/templates/deployment.yaml
-            kubectl apply -f .k8s/templates/service.yaml
+      - uses: actions/checkout@master
 
+      # Connect to Azure Container registry (ACR)
+      - uses: azure/docker-login@v1
+        with:
+          login-server: ${{ env.REGISTRY_NAME }}.azurecr.io
+          username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+
+      # Container build and push to a Azure Container registry (ACR)
+      - run: |
+          docker build . -t ${{ env.REGISTRY_NAME }}.azurecr.io/ardikars/gri-web:${{ github.sha }}
+          docker push ${{ env.REGISTRY_NAME }}.azurecr.io/ardikars/gri-web:${{ github.sha }}
+
+      # Set the target Azure Kubernetes Service (AKS) cluster.
+      - uses: azure/aks-set-context@v1
+        with:
+          creds: '${{ secrets.AZURE_CREDENTIALS }}'
+          cluster-name: ${{ env.CLUSTER_NAME }}
+          resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
+
+      # Create namespace if doesn't exist
+      - run: |
+          kubectl create namespace ${{ env.NAMESPACE }} --dry-run -o json | kubectl apply -f -
+
+      # Create imagepullsecret for Azure Container registry (ACR)
+      - uses: azure/k8s-create-secret@v1
+        with:
+          container-registry-url: ${{ env.REGISTRY_NAME }}.azurecr.io
+          container-registry-username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+          container-registry-password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+          secret-name: ${{ env.REGISTRY_NAME }}-registry-connection
+          namespace: ${{ env.NAMESPACE }}
+
+      # Deploy app to AKS
+      - uses: azure/k8s-deploy@v1
+        with:
+          manifests: |
+            .k8s/templates/deployment.yaml
+            .k8s/templates/service.yaml
+          images: |
+            ${{ env.REGISTRY_NAME }}.azurecr.io/ardikars/gri-web:${{ github.sha }}
+          imagepullsecrets: |
+            ${{ env.REGISTRY_NAME }}-registry-connection
+          namespace: ${{ env.NAMESPACE }}
