--- a/.k8s/templates/deployment.yaml
+++ b/.k8s/templates/deployment.yaml
@@ -35,4 +35,4 @@ spec:
               name: "http"
               protocol: "TCP"
       imagePullSecrets:
-        - name: regcred
+        - name: ardikarscr-registry-connection
