--- a/gri-web/src/main/resources/config/application-local.yml
+++ b/gri-web/src/main/resources/config/application-local.yml
@@ -6,7 +6,7 @@ spring:
       - common
   data:
     mongodb:
-      uri: ${SPRING_DATA_MONGODB_URI:mongodb://ardikars:abc123@ds117806.mlab.com:17806/heroku_1nj4kkqc}
+      uri: ${SPRING_DATA_MONGODB_URI:mongodb://ardikars:abc123@ds117806.mlab.com:17806/heroku_1nj4kkqc?retryWrites=false}
       #uri: ${SPRING_DATA_MONGODB_URI:mongodb://auth_user:auth_user@cluster0-shard-00-00-fjlws.gcp.mongodb.net:27017,cluster0-shard-00-01-fjlws.gcp.mongodb.net:27017,cluster0-shard-00-02-fjlws.gcp.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true&w=majority}
 
 management:
