--- a/cmsnesia-sdk-client/pom.xml
+++ b/cmsnesia-sdk-client/pom.xml
@@ -24,8 +24,14 @@
             <artifactId>cmsnesia-model</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-reactive-wrappers</artifactId>
+            <version>10.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.3.1.RELEASE</version>
         </dependency>
     </dependencies>
 
