--- a/.k8s/templates/deployment.yaml
+++ b/.k8s/templates/deployment.yaml
@@ -29,10 +29,10 @@ spec:
                   fieldPath: "metadata.namespace"
           imagePullPolicy: "IfNotPresent"
           name: "cmsnesia-web"
-          image: "ardikarscr.azurecr.io/ardikars/cmsnesia-web:latest"
+          image: "cmsnesiacr.azurecr.io/ardikars/cmsnesia-web:latest"
           ports:
             - containerPort: 8080
               name: "http"
               protocol: "TCP"
       imagePullSecrets:
-        - name: ardikarscr-registry-connection
+        - name: cmsnesiacr-registry-connection
