--- a/.k8s/templates/service.yaml
+++ b/.k8s/templates/service.yaml
@@ -7,16 +7,16 @@ metadata:
     version: "1.0.0-SNAPSHOT"
     group: "com.cmsnesia"
   name: "cmsnesia-web"
-  annotations:
-    service.beta.kubernetes.io/azure-load-balancer-resource-group: ardikars-rg
+  #annotations:
+    #service.beta.kubernetes.io/azure-load-balancer-resource-group: cmsnesiacr-rg
 spec:
   ports:
     - name: "http"
       port: 8080
-      targetPort: 8080
+      #targetPort: 8080
   selector:
     app: "cmsnesia-web-exposed"
     version: "1.0.0-SNAPSHOT"
     group: "com.cmsnesia"
   type: "LoadBalancer"
-  loadBalancerIP: 52.149.172.233
+  #loadBalancerIP: 52.149.172.233
