--- a/cmsnesia-sdk-client/pom.xml
+++ b/cmsnesia-sdk-client/pom.xml
@@ -29,6 +29,12 @@
             <version>10.7.4</version>
         </dependency>
         <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-jackson</artifactId>
+            <version>10.7.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
             <version>3.3.1.RELEASE</version>
