--- a/cmsnesia-web/src/main/resources/config/application-local.yml
+++ b/cmsnesia-web/src/main/resources/config/application-local.yml
@@ -19,10 +19,10 @@ management:
         uri: http://localhost:80862
         enabled: false
 
-gri:
+cmsnesia:
   token:
     issuer: ardikars
     accessTokenExparation: 288000
     refreshTokenExparation: 588000
     secret: 123456
-    max: 1000
+    max: 0
