--- a/cmsnesia-sdk-client/pom.xml
+++ b/cmsnesia-sdk-client/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>cmsnesia-model</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.2.3.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-reactive-wrappers</artifactId>
             <version>10.7.4</version>
@@ -33,7 +38,6 @@
             <artifactId>feign-jackson</artifactId>
             <version>10.7.4</version>
         </dependency>
-
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
