--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,17 @@
 
     <profiles>
         <profile>
+            <id>format</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.coveo</groupId>
+                        <artifactId>fmt-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>docker</id>
             <build>
                 <pluginManagement>
