--- a/pom.xml
+++ b/pom.xml
@@ -43,26 +43,6 @@
     </modules>
 
     <repositories>
-<!--        <repository>-->
-<!--            <id>sinergi-bumn-release</id>-->
-<!--            <url>http://nexus.doitlab.com/repository/sinergi-bumn-release/</url>-->
-<!--            <releases>-->
-<!--                <enabled>true</enabled>-->
-<!--            </releases>-->
-<!--            <snapshots>-->
-<!--                <enabled>false</enabled>-->
-<!--            </snapshots>-->
-<!--        </repository>-->
-<!--        <repository>-->
-<!--            <id>sinergi-bumn-snapshot</id>-->
-<!--            <url>http://nexus.doitlab.com/repository/sinergi-bumn-snapshot/</url>-->
-<!--            <releases>-->
-<!--                <enabled>false</enabled>-->
-<!--            </releases>-->
-<!--            <snapshots>-->
-<!--                <enabled>true</enabled>-->
-<!--            </snapshots>-->
-<!--        </repository>-->
         <repository>
             <id>jforg-snapshot</id>
             <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
@@ -305,5 +285,13 @@
             </build>
         </profile>
     </profiles>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/cmsnesia/cmsnesia</url>
+        </repository>
+    </distributionManagement>
 
 </project>
