Add storeage service

--- a/cmsnesia-web/src/main/resources/config/application-local.yml
+++ b/cmsnesia-web/src/main/resources/config/application-local.yml
@@ -26,3 +26,8 @@ cmsnesia:
     refreshTokenExparation: 414720000
     secret: 123456
     max: 0
+
+github:
+  owner: cmsnesia
+  repo: assets
+  accessToken: d2b8ce2f8418468b928cf0fee52bf2cf10b86611
