--- a/.github/workflows/digitalocean-deployment.yml
+++ b/.github/workflows/digitalocean-deployment.yml
@@ -44,3 +44,10 @@ jobs:
 
       - name: Verify deployment
         run: kubectl --kubeconfig=$GITHUB_WORKSPACE/.kubeconfig rollout status deployment/cmsnesia
+
+      - uses: actions/cache@v1
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
