--- a/.github/workflows/digitalocean-deployment.yml
+++ b/.github/workflows/digitalocean-deployment.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
         with:
-          args: kubernetes cluster kubeconfig show actions-example > $GITHUB_WORKSPACE/.kubeconfig
+          args: kubernetes cluster kubeconfig show cmsnesia-k8s-cluster-01 > $GITHUB_WORKSPACE/.kubeconfig
 
       - name: Deploy to DigitalOcean Kubernetes
         run: |
