Setup artifact deployment

--- a/.github/workflows/digitalocean-deployment.yml
+++ b/.github/workflows/digitalocean-deployment.yml
@@ -25,19 +25,24 @@ jobs:
       - name: Push image to Docker Hub
         run: docker push ardikars/cmsnesia
 
-      - name: Create deployment configuration
-        run: |
-          echo "${{ secrets.k8s_digital_ocean_config }}" | base64 --decode > .kubeconfig
-          echo "${{ secrets.k8s_deployment_base64 }}" | base64 --decode > .k8s/templates/deployment.yaml
+#      - name: Create deployment configuration
+#        run: |
+#          echo "${{ secrets.k8s_digital_ocean_config }}" | base64 --decode > .kubeconfig
+#          echo "${{ secrets.k8s_deployment_base64 }}" | base64 --decode > .k8s/templates/deployment.yaml
+#
+#      - name: Deploy to DigitalOcean Kubernetes
+#        run: |
+#          kubectl --kubeconfig=.kubeconfig apply -f .k8s/templates/namespace.yaml
+#          kubectl --kubeconfig=.kubeconfig apply -f .k8s/templates/deployment.yaml
+#          kubectl --kubeconfig=.kubeconfig apply -f .k8s/templates/service.yaml
+#
+#      - name: Verify deployment
+#        run: kubectl --kubeconfig=.kubeconfig rollout status deployment/cmsnesia-web
 
-      - name: Deploy to DigitalOcean Kubernetes
+      - name: Deploy artifact to github package registry
         run: |
-          kubectl --kubeconfig=.kubeconfig apply -f .k8s/templates/namespace.yaml
-          kubectl --kubeconfig=.kubeconfig apply -f .k8s/templates/deployment.yaml
-          kubectl --kubeconfig=.kubeconfig apply -f .k8s/templates/service.yaml
-
-      - name: Verify deployment
-        run: kubectl --kubeconfig=.kubeconfig rollout status deployment/cmsnesia-web
+          echo "${{ secrets.mvn_settings_base64 }}" | base64 --decode > .mvn/release-settings.xml
+          ./mvnw -B -s .mvn/release-settings.xml -pl !cmsnesia-web,!cmsnesia-tests,!cmsnesia-service-spec,!cmsnesia-service-impl,!cmsnesia-domain,!cmsnesia-assembler clean package deploy -DskipTests
 
       - name: Caching
         uses: actions/cache@v1
@@ -45,4 +50,4 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-
+            ${{ runner.os }}-maven
