--- a/.k8s/templates/service.yaml
+++ b/.k8s/templates/service.yaml
@@ -6,7 +6,8 @@ metadata:
     app: "cmsnesia-web"
     version: "1.0.0-SNAPSHOT"
     group: "com.cmsnesia"
-  name: "cmsnesia-web"
+  name: "cmsnesia-service"
+  namespace: "default"
 spec:
   ports:
     - name: "http"
@@ -15,4 +16,4 @@ spec:
     app: "cmsnesia-web-exposed"
     version: "1.0.0-SNAPSHOT"
     group: "com.cmsnesia"
-  type: "LoadBalancer"
+  type: "ClusterIP"
