--- a/cmsnesia-model/pom.xml
+++ b/cmsnesia-model/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.cmsnesia</groupId>
         <artifactId>cmsnesia</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>cmsnesia-model</artifactId>
