--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <groupId>com.cmsnesia</groupId>
     <artifactId>cmsnesia</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -60,32 +60,32 @@
             <dependency>
                 <groupId>com.cmsnesia</groupId>
                 <artifactId>cmsnesia-assembler</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.cmsnesia</groupId>
                 <artifactId>cmsnesia-model</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.cmsnesia</groupId>
                 <artifactId>cmsnesia-domain</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.cmsnesia</groupId>
                 <artifactId>cmsnesia-service-spec</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.cmsnesia</groupId>
                 <artifactId>cmsnesia-service-impl</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.cmsnesia</groupId>
                 <artifactId>cmsnesia-sdk-client</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0</version>
             </dependency>
             <dependency>
                 <groupId>javax.inject</groupId>
