--- a/cmsnesia-sdk-client/pom.xml
+++ b/cmsnesia-sdk-client/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.cmsnesia</groupId>
         <artifactId>cmsnesia</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>cmsnesia-sdk-client</artifactId>
