Add category group

--- a/cmsnesia-web/src/main/resources/config/application-local.yml
+++ b/cmsnesia-web/src/main/resources/config/application-local.yml
@@ -6,7 +6,7 @@ spring:
       - common
   data:
     mongodb:
-      uri: ''
+      uri: 'mongodb://ardikars:abc123@ds117806.mlab.com:17806/heroku_1nj4kkqc?retryWrites=false'
   codec:
     max-in-memory-size: 5MB
 
@@ -15,7 +15,7 @@ cmsnesia:
     issuer: 'cmsnesia'
     accessTokenExparation: 300000
     refreshTokenExparation: 600000
-    secret: ''
+    secret: 'bo7tcynit34'
     max: 0
 
 github:
