--- a/cmsnesia/templates/deployment.yaml
+++ b/cmsnesia/templates/deployment.yaml
@@ -24,7 +24,10 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            - name: "SPRING_APPLICATION_JSON"
+              value: '{{ .Values.cmsnesia.spring.application.json }}'
