--- a/cmsnesia/values.yaml
+++ b/cmsnesia/values.yaml
@@ -17,7 +17,7 @@ service:
   port: 8080
 
 ingress:
-  enabled: false
+  enabled: true
   annotations:
     kubernetes.io/ingress.class: "nginx"
     kubernetes.io/tls-acme: "true"
@@ -27,30 +27,29 @@ ingress:
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/cors-allow-headers: "Host, X-Request-ID, X-Read-IP, X-Forwarded-For, X-Forwarded-Host, X-Forwarded-Port, X-Forwarded-Proto, X-Scheme, X-Original-Forwarded-For, Accept-Encoding, CF-IPCountry, CF-RAY, CF-Visitor, user-agent, accept, accept-language, access-control-request-method, access-control-request-headers, referer, origin, CF-Connecting-IP, CDN-Loop, TE, Authorization, Content-Type"
+  tls:
+    - hosts:
+        - "api.cmsnesia.com"
+        - "apivtwo.cmsnesia.com"
+      secretName: cmsnesia-tls
   hosts:
     - host: "api.cmsnesia.com"
-      http:
-        paths:
-          - path: /
-            backend:
-              serviceName: "cmsnesia-service"
-              servicePort: 8080
-    - host: "admin.cmsnesia.com"
-      http:
-        paths:
-          - path: /
-            backend:
-              serviceName: "cmsnesia-admin-service"
-              servicePort: 80
-    - secretName: cmsnesia-tls
-      hosts:
-        - api.cmsnesia.com
-        - admin.cmsnesia.com
+      paths:
+        - "/"
+    - host: "apivtwo.cmsnesia.com"
+      paths:
+        - "/"
 
 resources:
   limits:
-    cpu: 100m
-    memory: 128Mi
+    cpu: 200m
+    memory: 256Mi
   requests:
     cpu: 100m
     memory: 128Mi
+
+# Change below creds for production
+cmsnesia:
+  spring:
+    application:
+      json: '{"spring.data.mongodb.uri":"mongodb://ardikars:abc123@ds117806.mlab.com:17806/heroku_1nj4kkqc?retryWrites=false","github.owner":"cmsnesia","github.repo":"assets","github.accessToken":"secret","cmsnesia.token.issuer":"ardikars","cmsnesia.token.accessTokenExparation":"207360000","cmsnesia.token.refreshTokenExparation":"414720000","cmsnesia.token.secret":"47uDxE74","cmsnesia.token.max":"0"}'
