--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .idea
-gri.logging.path_IS_UNDEFINED
+cmsnesia.logging.path_IS_UNDEFINED
 *.iml
 target
-gri-model/target
-gri-domain/target
-gri-assembler/target
-gri-service-spec/target
-gri-service-impl/target
-gri-web/target
-gri-tests/target
+cmsnesia-model/target
+cmsnesia-domain/target
+cmsnesia-assembler/target
+cmsnesia-service-spec/target
+cmsnesia-service-impl/target
+cmsnesia-web/target
+cmsnesia-tests/target
