--- a/cmsnesia/values.yaml
+++ b/cmsnesia/values.yaml
@@ -26,7 +26,7 @@ ingress:
     nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "Host, X-Request-ID, X-Read-IP, X-Forwarded-For, X-Forwarded-Host, X-Forwarded-Port, X-Forwarded-Proto, X-Scheme, X-Original-Forwarded-For, Accept-Encoding, CF-IPCountry, CF-RAY, CF-Visitor, user-agent, accept, accept-language, access-control-request-method, access-control-request-headers, referer, origin, CF-Connecting-IP, CDN-Loop, TE, Authorization, Content-Type"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "Host, X-Request-ID, X-Read-IP, X-Forwarded-For, X-Forwarded-Host, X-Forwarded-Port, X-Forwarded-Proto, X-Scheme, X-Original-Forwarded-For, Accept-Encoding, CF-IPCountry, CF-RAY, CF-Visitor, User-Agent, Accept, Accept-Language, Access-Control-Request-Method, Access-Control-Request-Headers, Referer, Origin, CF-Connecting-IP, CDN-Loop, TE, Authorization, Content-Type"
   tls:
     - hosts:
         - "api.cmsnesia.com"
@@ -34,7 +34,7 @@ ingress:
   hosts:
     - host: "api.cmsnesia.com"
       paths:
-        - "/auth/v1"
+        - "/"
 
 resources:
   limits:
