--- a/cmsnesia-web/pom.xml
+++ b/cmsnesia-web/pom.xml
@@ -46,6 +46,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.sbb</groupId>
+            <artifactId>springboot-graceful-shutdown</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
         <!-- Swagger -->
         <dependency>
