--- a/cmsnesia/values.yaml
+++ b/cmsnesia/values.yaml
@@ -28,6 +28,11 @@ ingress:
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/cors-allow-headers: "Host, X-Request-ID, X-Read-IP, X-Forwarded-For, X-Forwarded-Host, X-Forwarded-Port, X-Forwarded-Proto, X-Scheme, X-Original-Forwarded-For, Accept-Encoding, CF-IPCountry, CF-RAY, CF-Visitor, User-Agent, Accept, Accept-Language, Access-Control-Request-Method, Access-Control-Request-Headers, Referer, Origin, CF-Connecting-IP, CDN-Loop, TE, Authorization, Content-Type"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "server: hide";
+      more_set_headers "X-Content-Type-Options: nosniff";
+      more_set_headers "X-Xss-Protection: 1";
+      more_set_headers "Referrer-Policy: no-referrer";
   tls:
     - hosts:
         - "api.cmsnesia.com"
