--- a/cmsnesia-service-spec/pom.xml
+++ b/cmsnesia-service-spec/pom.xml
@@ -23,6 +23,10 @@
             <groupId>com.cmsnesia</groupId>
             <artifactId>cmsnesia-assembler</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.cmsnesia</groupId>
+            <artifactId>cmsnesia-accounts-model</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
