--- a/cmsnesia-web/pom.xml
+++ b/cmsnesia-web/pom.xml
@@ -41,7 +41,16 @@
             <artifactId>spring-cloud-starter-kubernetes</artifactId>
             <version>1.1.2.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.playtika.reactivefeign</groupId>
+            <artifactId>feign-reactor-webclient</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.playtika.reactivefeign</groupId>
+            <artifactId>feign-reactor-cloud2</artifactId>
+            <version>2.0.0</version>
+        </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
