Implement command pattern

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Deploy artifact to github package registry
         run: |
           echo "${{ secrets.mvn_settings_base64 }}" | base64 --decode > .mvn/release-settings.xml
-          ./mvnw -B -s .mvn/release-settings.xml -pl !cmsnesia-web,!cmsnesia-tests,!cmsnesia-service-spec,!cmsnesia-service-impl,!cmsnesia-domain,!cmsnesia-assembler clean package deploy -DskipTests
+          ./mvnw -B -s .mvn/release-settings.xml -pl !cmsnesia-web,!cmsnesia-service-spec,!cmsnesia-service-impl,!cmsnesia-domain,!cmsnesia-assembler clean package deploy -DskipTests
 
       - name: Build container image
         run: docker build -t ardikars/cmsnesia:snapshot .
